src/test/ui/issues/issue-37665.stderr
error[E0308]: mismatched types
  --> $DIR/issue-37665.rs:10:17
   |
LL |     let x: () = 0; //~ ERROR: mismatched types
   |                 ^ expected (), found integral variable
   |
   = note: expected type `()`
              found type `{integer}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
